// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders button variants 1`] = `
<button
  className="Button Button--primary "
  type="button"
/>
`;

exports[`renders button variants 2`] = `
<button
  className="Button Button--secondary Button--outline"
  type="button"
/>
`;

exports[`renders button variants 3`] = `
<button
  className="Button Button--primary Button--outline"
  type="button"
/>
`;
